CVS Version 20081126

+ Added an awk script to convert apot potentials to gnuplot format
+ A new validate function to check the generated potentials has
  been implemented
+ Removed precomputed power-tables
+ Completely rewritten the smooth-cutoff option (now beta stage)
+ imdpot is now optional and no longer mandatory
+ New parameter "plotmin", the plotting potential and imd potential will
  begin at this point (works only for APOT)

Changes in potfit20081104

Bugfix:

+ Error in bracketing (pathological cases)
+ Issues with new MKL/icc releases.
+ Bug in potential rescaling
+ vasp2force Bug: Incorrect scale.

Enhancement:

+ ACML support in Makefile
+ Better output in cases of short distance errors
+ Separate optimisation potential from calculation potential
+ EAM potentials: Implementation of gauge constraints with NORESC compilation
  option redone.
+ Improved output during optimisation.
+ vasp2force support for multiple MD steps greatly improved.
+ Reorder potentials with pottrans.

New Features:

+ Analytic pair potentials (alpha).
+ Awk scripts for potential generation, combination, ...